Fixing order page alignment

--- a/assets/styles/homepage.css
+++ b/assets/styles/homepage.css
@@ -181,6 +181,7 @@ p {
 	flex-direction: column;
 	align-items: center;
 	max-width: 1050px;
+	margin: 0 auto;
 	gap: 1rem;
 }
 
